MODON MRE BPDEV/force-app/main/default/objects/DocumentType__c/fields/EmailTemplateId__c.field-meta.xml
<CustomField>
    <fullName>EmailTemplateId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email Template Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>