MODON MRE BPDEV/force-app/main/default/objects/DocumentType__c/fields/HasExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>HasExpiryDate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Expiry Date</label>
    <type>Checkbox</type>
</CustomField>