MODON MRE BPDEV/force-app/main/default/objects/DocumentType__c/fields/HasIssueDate__c.field-meta.xml
<CustomField>
    <fullName>HasIssueDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Has Issue Date</label>
    <type>Date</type>
</CustomField>