MODON MRE BPDEV/force-app/main/default/objects/DocumentType__c/fields/ObjectType__c.field-meta.xml
<CustomField>
    <fullName>ObjectType__c</fullName>
    <label>ObjectType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>Sales Order</fullName>
            </value>
            <value>
                <fullName>Service Request</fullName>
            </value>
            <value>
                <fullName>Prospect Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>