MODON MRE BPDEV/force-app/main/default/objects/DocumentType__c/fields/RecordTypeDevName__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeDevName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Record Type Dev Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>