MODON MRE BPDEV/force-app/main/default/objects/DocumentType__c/fields/ShareWithCustomer__c.field-meta.xml
<CustomField>
    <fullName>ShareWithCustomer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Share With Customer</label>
    <type>Checkbox</type>
</CustomField>