MODON MRE BPDEV/force-app/main/default/objects/DocumentType__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Booking Form</fullName>
            </value>
            <value>
                <fullName>Booking Form - Signed</fullName>
            </value>
            <value>
                <fullName>Broker Document</fullName>
            </value>
            <value>
                <fullName>Emirates/National ID Front</fullName>
            </value>
            <value>
                <fullName>Layout</fullName>
            </value>
            <value>
                <fullName>Milestone Update</fullName>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>POA Document</fullName>
            </value>
            <value>
                <fullName>Sales Offer</fullName>
            </value>
            <value>
                <fullName>SPA</fullName>
            </value>
            <value>
                <fullName>SPA - Signed</fullName>
            </value>
            <value>
                <fullName>Trade License</fullName>
            </value>
            <value>
                <fullName>Visa</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>ADM Registration Document</fullName>
            </value>
            <value>
                <fullName>Unit Registration</fullName>
            </value>
            <value>
                <fullName>Payment Proof</fullName>
            </value>
            <value>
                <fullName>Payment Receipt</fullName>
            </value>
            <value>
                <fullName>Case Support Document</fullName>
            </value>
            <value>
                <fullName>Support Document</fullName>
            </value>
            <value>
                <fullName>Deregistration Form</fullName>
            </value>
            <value>
                <fullName>Emirates/National ID Back</fullName>
            </value>
            <value>
                <fullName>Other Supporting Document</fullName>
            </value>
            <value>
                <fullName>Commercial trade License (Resident)</fullName>
            </value>
            <value>
                <fullName>Certificate of Incorporation (Non Resident)</fullName>
            </value>
            <value>
                <fullName>NOC</fullName>
            </value>
            <value>
                <fullName>MCD</fullName>
            </value>
            <value>
                <fullName>Title Deed (After Transfer)</fullName>
            </value>
            <value>
                <fullName>Community NOC</fullName>
            </value>
            <value>
                <fullName>Payment Plan Swap Addendum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>