MODON MRE BPDEV/force-app/main/default/objects/DocumentType__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ObjectType__c</columns>
    <columns>RecordTypeDevName__c</columns>
    <columns>ShareWithCustomer__c</columns>
    <columns>IsSystemUpload__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>